# mne-connectivity

./: .codespellignore  .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  .yamllint.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  compare_statsmodels.ipynb  environment.yml  ignore_words.txt  index.html  junit-results.xml  pyproject.toml  requirements.txt  requirements_doc.txt  requirements_testing.txt  setup.cfg  setup.py  test_requirements.txt
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/workflows/: automerge.yml  cffconvert.yml  check_changelog.yml  circle_artifacts.yml  code-style.yaml  linux.yml  linux_conda.yml  macos.yml  publish_release.yml  release.yml  unit_tests.yml
benchmarks/: bench_var.py  single_epoch_conn.py
dev/: .buildinfo  api.html  bibliography.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_api_usage.html  sg_execution_times.html  whats_new.html  whats_new_previous_releases.html
dev/_modules/: index.html
dev/_static/: documentation_options.js
dev/auto_examples/: cacoh.html  compare_coherency_methods.html  compare_connectivity_over_time_over_trial.html  connectivity_classes.html  cwt_sensor_connectivity.html  dpli_wpli_pli.html  granger_causality.html  handling_ragged_arrays.html  index.html  mic_mim.html  mixed_source_space_connectivity.html  mne_inverse_coherence_epochs.html  mne_inverse_connectivity_spectrum.html  mne_inverse_envelope_correlation.html  mne_inverse_envelope_correlation_volume.html  mne_inverse_label_connectivity.html  mne_inverse_psi_visual.html  sensor_connectivity.html  sg_execution_times.html  surrogate_connectivity.html  wsmi.html
dev/changes/: dev.html  v0.1.html  v0.2.html  v0.3.html  v0.4.html  v0.5.html  v0.6.html  v0.7.html  v0.8.html
doc/: Makefile  api.rst  authors.inc  conf.py  index.rst  install.rst  references.bib  user_guide.rst  whats_new.rst  whats_new_previous_releases.rst
doc/_static/: style.css  versions.json
doc/_templates/: docs-navbar.html  layout.html  navbar.html  version-switcher.html
doc/changes/: dev.rst.template  names.inc  v0.1.rst  v0.2.rst  v0.3.rst  v0.4.rst  v0.5.rst  v0.6.rst  v0.7.rst  v0.8.rst
examples/: README.txt  cacoh.py  cacoh_vs_mic.py  compare_coherency_methods.py  compare_connectivity_over_time_over_trial.py  connectivity_classes.py  cwt_sensor_connectivity.py  dpli_wpli_pli.py  granger_causality.py  handling_ragged_arrays.py  mic_mim.py  mixed_source_space_connectivity.py  mne_connectivity_classification.py  mne_inverse_coherence_epochs.py  mne_inverse_connectivity_spectrum.py  mne_inverse_envelope_correlation.py  mne_inverse_envelope_correlation_volume.py  mne_inverse_label_connectivity.py  mne_inverse_psi_visual.py  mne_time_frequency_targeted_seed_connectivity.py  mne_util.py  plot_compute_rt_average.py  plot_compute_rt_decoder.py  plot_ftclient_rt_average.py  plot_ftclient_rt_compute_psd.py  plot_lslclient_rt.py  plot_rt_feedback_server.py  rt_feedback_client.py  rt_feedback_server.py  sensor_connectivity.py  spectral_connectivity_epoch_vs_time_simulated_data.py  state_space_connectivity.py  surrogate_connectivity.py  wsmi.py  wsmi_example.py
examples/decoding/: README.txt  cohy_decomposition.py  cohy_decomposition_plotting.py
examples/dynamic/: README.txt  mne_var_classification.py  mne_var_connectivity.py
examples/information-theoretic/: README.txt
examples/megssm/: message_passing.py  mne_util.py  models.py  numpy_numthreads.py  plotting.py
mne_connectivity/: __init__.py  _version.py  base.py  conftest.py  effective.py  envelope.py  io.py  signal.py  smooth.py  spectral.py  stats.py  utils.py  var.py  wsmi.py
mne_connectivity/datasets/: __init__.py  frequency.py  surrogate.py
mne_connectivity/decoding/: __init__.py  coherency.py  decomposition.py
mne_connectivity/spectral/: __init__.py  base.py  epochs.py  epochs_bivariate.py  epochs_classes.py  epochs_multivar.py  epochs_multivariate.py  smooth.py  time.py  time_hilbert.py
mne_connectivity/tests/: test_connectivity.py  test_datasets.py  test_effective.py  test_envelope.py  test_spectral.py  test_stats.py  test_utils.py  test_var.py  test_wsmi.py
mne_connectivity/utils/: __init__.py  docs.py  utils.py
mne_connectivity/vector_ar/: __init__.py  check.py  model_selection.py  utils.py  var.py  var_model.py
mne_connectivity/viz/: _3d.py  __init__.py  circle.py
stable/: .buildinfo  api.html  bibliography.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_api_usage.html  sg_execution_times.html  whats_new.html  whats_new_previous_releases.html
stable/_modules/: index.html
stable/_static/: documentation_options.js  style.css
stable/auto_examples/: cacoh.html  compare_coherency_methods.html  compare_connectivity_over_time_over_trial.html  connectivity_classes.html  cwt_sensor_connectivity.html  dpli_wpli_pli.html  granger_causality.html  handling_ragged_arrays.html  index.html  mic_mim.html  mixed_source_space_connectivity.html  mne_inverse_coherence_epochs.html  mne_inverse_connectivity_spectrum.html  mne_inverse_envelope_correlation.html  wsmi.html  (+6 more)
state_space/: state_space_connectivity.py  state_space_connectivity_test.py  test_state_space.py
tools/: circleci_dependencies.sh  generate_citation.py
v0.1/: bibliography.html  objects.inv  searchindex.js  whats_new.html
v0.2/: search.html  searchindex.js  whats_new_previous_releases.html
v0.3/: api.html  index.html  install.html
v0.4/: api.html  bibliography.html  install.html  objects.inv  searchindex.js
v0.5/: .buildinfo  api.html  bibliography.html  objects.inv  whats_new.html  whats_new_previous_releases.html
v0.6/: api.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  whats_new_previous_releases.html
v0.7/: .buildinfo  genindex.html  install.html  py-modindex.html
(+317 files in other folders)
